2003-11-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/widget (showCode,printCode): Added code to print
	the source code on Unix and Win, courtesy of Arjen Markus and the
	Wiki.  [Patch 835644]

2003-11-03  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c
	* tests/textDisp.test: test and fix to a panic reported in 
	[Bug 833627], with tkchat, and an unused variable [Bug 835010].
	Also fixes substantial parts of [Bug 833761]

2003-11-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/widget, etc.: Made widget demos locate themselves
	independently of the main Tk library using the new global variable
	tk_demoDirectory.  [Patch 832691, adapted]

	* generic/tkTextDisp.c (TextGetScrollInfoObj): Stop complaints
	about signed vs. unsigned for the length of strings.

2003-11-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/msgs/nl.msg: Updated messages from Arjen Markus and
	Pascal Scheffers.  Thanks!  [Patch 820519]

2003-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): OS X uses
	32bpp images internally always, so make use of the assumption.

2003-10-31  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c
	* generic/tkTextIndex.c
	* generic/tkTextDisp.c
	* generic/tkTextWind.c
	* generic/tkTextImage.c
	* generic/tkTextTag.c
	* generic/tkTextMark.c
	* generic/tkTextBTree.c
	* generic/tkText.h         
	* doc/text.n
	* tests/text.test
	* tests/textDisp.test
	* tests/textImage.test
	* tests/textIndex.test
	* tests/textWind.test
	* library/text.tcl            
	* generic/tkCanvas.c
	* unix/tkUnixDefault.h
	* win/tkWinDefault.h
	* mac/tkMacDefault.h
	* macosx/tkMacOSXDefault.h        -- TIP 155 implementation
	
	This adds the 'count' and 'replace' subcommands to the text
	widget, the '-blockcursor' option, and in particular provides
	correct, smooth pixel-based scrolling of the widget under all